# transformer_pas_analysis

./: .gitignore  Makefile  Pipfile  README.md  evaluate.sh  log.txt  pyproject.toml  test_all_case.sh
notebook/: BaselineModel-all-1e-nict-cz-vpa-npa-bar-cr-debug.json  BaselineModel-wnf-4e-nict-ocz-vpa-npa-bar-cr.json  BaselineModelOld-all-1e-nict-cz-vpa-npa-bar-cr-debug.json  BaselineModelOld-all-4e-nict-cz-vpa-npa-brg-coref.json  check_tokenize.ipynb  examine_overt.ipynb  pred_or_noun.ipynb  stat.ipynb
scripts/: aggregator.py  confidence_interval.py  coverage.py  rewrite.py  train.sh  train_curriculum.sh  train_curriculum_2step.sh  train_curriculum_base.sh
src/: api_server.py  configure.py  inference.py  knp2conll.py  kwdlc2conll.py  parse_config.py  predict.py  prediction.py  preprocess.py  scorer.py  template.html  test.py  train.py  xmlrpc_server.py
src/analyzer/: analyzer.py  config.example.ini
src/base/: base_data_loader.py  base_model.py  base_trainer.py
src/data_loader/: data_loaders.py  dataset.py  input_features.py  reader.py
src/kwdlc_reader/: __init__.py  base_phrase.py  constants.py  coreference.py  entity.py  ne.py  pas.py  reader.py
src/logger/: visualization.py
src/model/: loss.py  metric.py  model.py
src/prediction/: inference.py  prediction_writer.py
src/tests/: conftest.py  test_kwdlc_reader.py
src/tokenizer/: __init__.py  bart_spm_tokenizer.py  bert_tokenizer.py  bibart_tokenizer.py  mbart_tokenizer.py  t5_tokenizer.py  utils.py
src/trainer/: base_trainer.py  trainer.py
tests/: conftest.py  test_output_aggr.py  test_scorer.py
(+16 files in other folders)
