[tool.poetry]
name = "bert_pas_analysis"
version = "0.1.0"
description = "BERT based PAS analysis"
authors = ["Nobuhiro Ueda <ueda@nlp.ist.i.kyoto-u.ac.jp>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
torch = "^1.4.0"
transformers = "^2.5.0"
pyknp = { git = "https://github.com/ku-nlp/pyknp.git", branch = "master" }
textformatting = { git = "https://github.com/ku-nlp/python-textformatting.git", branch = "master" }
kyoto-reader = { git = "https://github.com/ku-nlp/kyoto-reader.git", branch = "master" }
numpy = "^1.18.1"
tqdm = "^4.43.0"
flask = "^1.1.1"
scikit-learn = "^0.22.1"
jaconv = "^0.2.4"

[tool.poetry.dev-dependencies]
ipython = "^7.12.0"
ipdb = "^0.12.3"
pytest = "^5.3.5"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
